fix: overflow: visible을 하면 생기는 문제 고침

--- a/css/header.css
+++ b/css/header.css
@@ -56,8 +56,12 @@ header {
 header .header_container {
   width: 100%;
   height: 120px;
-  overflow: visible;
+  overflow: hidden;
   transition: .5s;
+}
+
+header .header_container.on {
+  overflow: visible;
 }
 
 .header_container .header_section {
